<resources>
    <string name="app_name">LET ME GO</string>
    <string name="button_grant">Grant</string>
    <string name="text_let_me_go_requires_permissions">LET ME GO uses Tencent LBS SDK which requires some permissions to work properly.</string>
    <string name="text_phone_permission">Read phone state</string>
    <string name="text_storage_permission">Read and write SD card</string>
    <string name="text_location_permission">Access device\'s location</string>
    <string name="point_on_map">Point on map</string>
    <string name="notification_title_tracking_foreground_service">Tracking your moving towards the destination</string>
    <string name="notification_text_tracking_foreground_service">Tap here to view detail.</string>
    <string name="notification_title_arrival">You\'ve reached the destination!</string>
    <string name="notification_text_arrival">Tap here to stop tracking.</string>
    <string name="toast_app_is_still_tracking">The app is tracking for you at background</string>
    <string name="text_permissionsNotAllGranted">Permissions are not all granted.</string>
    <string name="cd_toggleCameraMode">Toggle camera mode of the map</string>
    <string name="label_privacyPolicy">Privacy policy</string>
    <string name="label_about">About</string>
    <string name="label_accept">Accept</string>
    <string name="richText_privacyPolicyMessage">Before using this application, you must read our &lt;a href="%s">Privacy Policy&lt;/a> carefully and accept it. Clicking "Accept" means that you have accepted the Privacy Policy.</string>
    <string name="label_exit">Exit</string>
    <string name="cd_favorite">Favorite</string>
    <string name="cd_notify">Notify</string>
    <string name="text_failToOperate">Fail to operate</string>
    <string name="cd_openFavoriteList">Open favorite list</string>
    <string name="label_favoriteDestinationList">Favorite destinations</string>
    <string name="text_noFavoriteDestinations">No favorite destinations.</string>
    <string name="cd_destinationMenuButton">Destination menu button</string>
    <string name="label_editRemark">Edit remark</string>
    <string name="label_copyId">Copy ID</string>
    <string name="label_un_favorite">Un-favorite</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_destinationId">Destination ID</string>
    <string name="label_remark">Remark</string>
    <string name="text_inputDestination">Input destination</string>
    <string name="label_searchDestination">Search destination</string>
    <string name="text_destinationNotFound">Destination not found</string>
    <string name="cd_closeSearch">Close search</string>
    <string name="cd_clearQuery">Clear query</string>
    <string name="label_pickDestination">Pick destination</string>
    <string name="label_developer">Developer</string>
    <string name="author_name" translatable="false">Perqin</string>
    <string name="author_signature">I like Yukino Yukinoshi forever.</string>
    <string name="label_openSourceCredits">Open source credits</string>
</resources>
