<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_app_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/permissionsGuideConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:id="@+id/permissionsTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="center"
            android:text="@string/text_let_me_go_requires_permissions"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/phonePermissionTextView" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/phonePermissionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="@string/text_phone_permission"
            android:textColor="@color/red_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/permissionsTitleTextView"
            app:layout_constraintBottom_toTopOf="@id/locationPermissionTextView" />

        <TextView
            android:id="@+id/locationPermissionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_location_permission"
            android:textColor="@color/red_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phonePermissionTextView"
            app:layout_constraintBottom_toTopOf="@id/storagePermissionTextView" />

        <TextView
            android:id="@+id/storagePermissionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_storage_permission"
            android:textColor="@color/red_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationPermissionTextView"
            app:layout_constraintBottom_toTopOf="@id/grantPermissionsButton" />

        <Button
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/grantPermissionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_grant"
            android:backgroundTint="?colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storagePermissionTextView"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
