<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.perqin.letmego.pages.main.MainFragment">

    <fragment
        class="com.tencent.tencentmap.mapsdk.maps.SupportMapFragment"
        android:id="@+id/mapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/permissionsGuideConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:id="@+id/permissionsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_let_me_go_requires_permissions"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/phonePermissionTextView" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/phonePermissionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_phone_permission"
            android:textColor="@color/red_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/permissionsTitleTextView"
            app:layout_constraintBottom_toTopOf="@id/locationPermissionTextView" />

        <TextView
            android:id="@+id/locationPermissionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_location_permission"
            android:textColor="@color/red_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phonePermissionTextView"
            app:layout_constraintBottom_toTopOf="@id/storagePermissionTextView" />

        <TextView
            android:id="@+id/storagePermissionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_storage_permission"
            android:textColor="@color/red_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationPermissionTextView"
            app:layout_constraintBottom_toTopOf="@id/grantPermissionsButton" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/grantPermissionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_grant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storagePermissionTextView"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
