<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.perqin.letmego.pages.main.map.MapFragment">

    <include layout="@layout/layout_app_bar" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.tencent.tencentmap.mapsdk.maps.SupportMapFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeDetailConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:focusable="true"
        android:background="@android:color/background_light"
        android:visibility="gone"
        app:layout_insetEdge="bottom"
        tools:visibility="visible">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/placeTitleTextView"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/favoriteImageButton"
            tools:text="公司" />

        <ImageButton
            android:id="@+id/favoriteImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_star_border_black_24dp"
            android:tint="?attr/colorControlNormal"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/cd_favorite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/notifyImageButton" />

        <ImageButton
            android:id="@+id/notifyImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cd_notify"
            android:src="@drawable/ic_notifications_none_black_24dp"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/placeAddressTextView"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeTitleTextView"
            tools:text="深圳市南山区深南大道9988号" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteListFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_baseline_playlist_add_check_24"
        android:contentDescription="@string/cd_openFavoriteList" />

    <View
        android:id="@+id/spacerView"
        android:layout_width="56dp"
        android:layout_height="16dp"
        android:layout_gravity="center_horizontal|top"
        android:background="@color/colorAccent"
        android:visibility="invisible"
        app:layout_anchor="@id/favoriteListFab"
        app:layout_anchorGravity="center_horizontal|top"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mapCameraModeFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/ic_my_location_black_24dp"
        android:tint="@color/tint_inactivate"
        android:backgroundTint="@android:color/white"
        android:contentDescription="@string/cd_toggleCameraMode"
        app:borderWidth="0dp"
        app:layout_anchor="@id/spacerView"
        app:layout_anchorGravity="center_horizontal|top" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
